--- a/futuregen/Framework/Makefile
+++ b/futuregen/Framework/Makefile
@@ -2,7 +2,7 @@ CXX = $(shell wx-config --cxx)
 WX_CXX = $(shell wx-config --cxxflags)
 WX_LIBS = $(shell wx-config --libs)
 VE_UI_HOME = ./../VE_UI
-IDL_HOME = ./../IDL.old
+IDL_HOME = ./../IDL
 XERCESCROOT=/home/yang/newinterface/xerces-c-src_2_5_0
 
 PLATFORM = LINUX
