removed obsolete define TABLET

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -276,7 +276,7 @@ DEBUG_APP?=		TRUE
 #OPTIM_APP?=		TRUE
 
 # vtkActorToPF needs VTK4
-EXTRA_CXXFLAGS+=	-DVTK4 #${TABLET} 
+EXTRA_CXXFLAGS+=	-DVTK4
 #$(EXTRA_FLAGS) 
 
 #EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG -gslim 
