The four files of the quaternion camera class were added. Lines were added in cfdApp to initialize in init scene, and perform operations in preframe. ReadParam was modified to read in the quatcam filename from the parameter file. An update function was added in cfdNavigate.

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -128,6 +128,8 @@ SRCS=\
    cfdTransientParticleActor_fluent.cxx \
    VjObs_i.cxx \
    cfdDCS.cxx \
+   cfdQuatCamHandler.cxx \
+   cfdQuatCam.cxx \
    cfdSequence.cxx \
    cfdIHCCModel.cxx \
    cfdIHCCGauge.cxx \
