--- a/VE_Builder/Translator/Makefile
+++ b/VE_Builder/Translator/Makefile
@@ -1,8 +1,5 @@
 # Create the OS-dependent directory name
-UNAME= $(shell uname -s)
-LIBS_DIR= $(UNAME)_LIB
-
-APP_NAME= $(VE_SUITE_HOME)/bin/$(UNAME)/translateToVtk
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/translateToVtk
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
@@ -33,8 +30,8 @@ SRCS=\
    jdMAPReader.cpp
 #   vtkEnSightFortranBinaryReader.cxx \
 
-OBJDIR=	$(LIBS_DIR)
-DEPDIR=	$(LIBS_DIR)
+OBJDIR=	$(CFDHOSTTYPE)
+DEPDIR=	$(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
@@ -63,7 +60,6 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer
 vpath %.h    $(VE_SUITE_HOME)/VE_Xplorer
 
-
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
@@ -72,7 +68,7 @@ cxx: $(OBJS)
 # Create the OS-dependent directory for the executable. If the dir exists, 
 # 'mkdir -p' silently ignores, so no test needed. Works with multiple arguments.
 ${APP_NAME}: $(OBJS)
-	mkdir -p $(VE_SUITE_HOME)/bin/$(UNAME)
+	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
 
 #install:
