--- a/VE_Builder/Utilities/mk/removeVtkPointData/Makefile
+++ b/VE_Builder/Utilities/mk/removeVtkPointData/Makefile
@@ -1,7 +1,4 @@
-UNAME= $(shell uname -s)
-LIBS_DIR= $(VE_SUITE_HOME)/VE_Builder/Utilities/$(UNAME)_LIB
-
-APP_NAME= $(VE_SUITE_HOME)/bin/$(UNAME)/removeVtkPointData
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/removeVtkPointData
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
@@ -15,8 +12,8 @@ SRCS=\
    readWriteVtkThings.cxx \
    removeVtkPointData.cpp 
 
-OBJDIR=	$(LIBS_DIR)
-DEPDIR=	$(LIBS_DIR)
+OBJDIR=../../$(CFDHOSTTYPE)
+DEPDIR=../../$(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
@@ -46,7 +43,6 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
 #vpath %.h   $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
-
 
 # -----------------------------------------------------------------------------
 # Application build targets.
