Eliminated use of environment variables UNAME, VE_LIBS, or CFD_LIBS.  Instead, we only define CFDHOSTTYPE in the setup script and it will be something like IRIX64, SuSE_9.1, or RedHat_8.0. We use that as a directory name to store all depends, object files, and executables.  The resulting directory structure is simplified.

--- a/VE_Builder/Utilities/Makefile
+++ b/VE_Builder/Utilities/Makefile
@@ -1,6 +1,3 @@
-# Create the OS-dependent directory name
-UNAME= $(shell uname -s)
-
 # -----------------------------------------------------------------------------
 # Build targets.
 # -----------------------------------------------------------------------------
@@ -23,7 +20,7 @@ makeVtkSurface meshViewer convertVTK2Binary \
       moveFieldToPointData whatIsScalarRange \
       combineFluentParticleFile mergeVertices appendVTK \
       createMiniFlowdata convertCellDataToPointData ::
-	mkdir -p $(VE_SUITE_HOME)/bin/$(UNAME)
+	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
 	cd ./mk/$@ && $(MAKE) all
 
 # -----------------------------------------------------------------------------
