--- a/VE_Builder/Utilities/mk/arrowCreator/Makefile
+++ b/VE_Builder/Utilities/mk/arrowCreator/Makefile
@@ -1,7 +1,4 @@
-UNAME= $(shell uname -s)
-LIBS_DIR= $(VE_SUITE_HOME)/VE_Builder/Utilities/$(UNAME)_LIB
-
-APP_NAME= $(VE_SUITE_HOME)/bin/$(UNAME)/arrowCreator
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/arrowCreator
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
@@ -14,8 +11,8 @@ SRCS=\
    arrowCreator.cpp \
    cfdArrow.cpp 
 
-OBJDIR=	$(LIBS_DIR)
-DEPDIR=	$(LIBS_DIR)
+OBJDIR=../../$(CFDHOSTTYPE)
+DEPDIR=../../$(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
@@ -45,7 +42,6 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
 #vpath %.h   $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
-
 
 # -----------------------------------------------------------------------------
 # Application build targets.
