--- a/VE_Builder/Utilities/mk/combineFluentParticleFile/Makefile
+++ b/VE_Builder/Utilities/mk/combineFluentParticleFile/Makefile
@@ -1,7 +1,4 @@
-UNAME= $(shell uname -s)
-LIBS_DIR= $(VE_SUITE_HOME)/VE_Builder/Utilities/$(UNAME)_LIB
-
-APP_NAME= $(VE_SUITE_HOME)/bin/$(UNAME)/combineFluentParticleFile
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/combineFluentParticleFile
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
@@ -13,8 +10,8 @@ srcdir=	../../
 SRCS=\
    CombinePartFiles.cpp 
 
-OBJDIR=	$(LIBS_DIR)
-DEPDIR=	$(LIBS_DIR)
+OBJDIR=../../$(CFDHOSTTYPE)
+DEPDIR=../../$(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
@@ -44,7 +41,6 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
 #vpath %.h   $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
-
 
 # -----------------------------------------------------------------------------
 # Application build targets.
