--- a/VE_Builder/Utilities/mk/meshViewer/Makefile
+++ b/VE_Builder/Utilities/mk/meshViewer/Makefile
@@ -1,7 +1,4 @@
-UNAME= $(shell uname -s)
-LIBS_DIR= $(VE_SUITE_HOME)/VE_Builder/Utilities/$(UNAME)_LIB
-
-APP_NAME= $(VE_SUITE_HOME)/bin/$(UNAME)/meshViewer
+APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/meshViewer
 
 all:
 	$(MAKE) NO_DEPEND=0 cxx
@@ -19,8 +16,8 @@ SRCS=\
    readWriteVtkThings.cpp \
    cfdGrid2Surface.cpp 
 
-OBJDIR=	$(LIBS_DIR)
-DEPDIR=	$(LIBS_DIR)
+OBJDIR=../../$(CFDHOSTTYPE)
+DEPDIR=../../$(CFDHOSTTYPE)
 NO_DEPEND= YES
 # One of these must be uncommented.
 DEBUG_APP?=		TRUE
@@ -50,7 +47,6 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
 #vpath %.h   $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
-
 
 # -----------------------------------------------------------------------------
 # Application build targets.
