the makefile pull ModuleC for the IDL_HOME

--- a/futuregen/Executive/Makefile
+++ b/futuregen/Executive/Makefile
@@ -25,20 +25,6 @@ include $(TAO_ROOT)/rules.tao.GNU
 include $(XERCESCROOT)/version.incl
 include ../Plugin/Makefile.incl
 
-IDL_FILES = ../IDL/module
-IDL_SRC = ../IDL/moduleC.cpp ../IDL/moduleS.cpp
-
-PROG_SRCS = $(IDL_SRC) \
-            interface.cpp \
-            package.cpp \
-            Network_Exec.cpp \
-            Scheduler.cpp \
-            Exe_server.cpp \
-            Executive_i.cpp \
-            string_ops.cpp
-
-LSRC = $(PROG_SRCS)
-
 FILE_Exe_SVR_OBJS = moduleC.o moduleS.o Exe_server.o Executive_i.o interface.o package.o Network_Exec.o Scheduler.o string_ops.o
 
 BIN_UNCHECKED = Exe_server
@@ -49,13 +35,12 @@ include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
 include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
 include $(TAO_ROOT)/taoconfig.mk
 
-vpath %.cpp ${EXECUTIVE_HOME} ${PLUGIN_HOME}
-
+vpath %.cpp ${EXECUTIVE_HOME} ${PLUGIN_HOME} ${IDL_HOME}
 
 TAO_IDLFLAGS += -Ge 1
 
 LDFLAGS += -L$(TAO_ROOT)/tao -L$(TAO_ROOT)/orbsvcs/orbsvcs -L$(XERCESCROOT)/lib
-CPPFLAGS += -I$(TAO_ROOT) -I$(TAO_ROOT)/orbsvcs \
+CPPFLAGS += -I$(TAO_ROOT) -I$(TAO_ROOT)/orbsvcs -I${IDL_HOME}\
             -I${EXECUTIVE_HOME} -I./. -I${PLUGIN_HOME} -LANG:std \
             -I$(XERCESCROOT)/include
 
@@ -97,9 +82,15 @@ CPPFLAGS += -I$(TAO_ROOT) -I$(TAO_ROOT)/orbsvcs \
 #include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
 #include $(TAO_ROOT)/taoconfig.mk
 
-.PRECIOUS: moduleC.h moduleC.i moduleC.cpp moduleS.h moduleS.i moduleS.cpp
+.PRECIOUS: moduleC.i moduleC.cpp moduleS.i moduleS.cpp
 
 all: Exe_server
+
+.cpp.o :
+	$(CXX) -g -c $(CPPFLAGS) -w -o $@ $<
+
+.cc.o :
+	$(CXX) -g -c $(CPPFLAGS) -w -o $@ $<
 
 Exe_server: $(addprefix $(VDIR),$(FILE_Exe_SVR_OBJS))
 	$(LINK.cc) $(LDFLAGS) -o $@ $^ $(TAO_SRVR_LIBS) $(VLDLIBS) $(POSTLINK)
