fix up the GasFeedbackUnit's gas in retrieving

--- a/futuregen/Unit/GasFeedbackUnit/Makefile
+++ b/futuregen/Unit/GasFeedbackUnit/Makefile
@@ -18,7 +18,7 @@ ifndef TAO_ROOT
   TAO_ROOT = $(ACE_ROOT)/TAO
 endif # ! TAO_ROOT
 
-APP = UnitApp
+APP = GasFeedbackUnitApp
 
 LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO
 
