--- a/futuregen/Plugin/UIWizard/Makefile.TEMPLATE
+++ b/futuregen/Plugin/UIWizard/Makefile.TEMPLATE
@@ -1,13 +1,12 @@
 CXX = $(shell wx-config --cxx)
 WX_FLAGS = $(shell wx-config --cxxflags)
 WX_LIBS = $(shell wx-config --libs)
-XERCESCROOT=/home/yang/newinterface/xerces-c-src_2_5_0
 
 PLATFORM = LINUX
 COMPILER = g++
 GCC = yes
 GXX = yes
-CXXFLAGS =   -g -w -O  -DAPP_NO_THREADS -DXML_USE_NO_THREADS  
+CXXFLAGS =   -g -w -O  -DAPP_NO_THREADS -DXML_USE_NO_THREADS  -I../
 CFLAGS =   -g -w -O  -DAPP_NO_THREADS -DXML_USE_NO_THREADS  
 LDFLAGS =    
 THREADS = none
@@ -15,7 +14,7 @@ EXTRA_LIBS =
 PREFIX = /usr/local
 
 include ${XERCESCROOT}/version.incl
-include Makefile.incl
+include ../Makefile.incl
 
 PLUGIN = libTEMPLATE.so
 OBJECTS = TEMPLATE.o \
